--- a/main.htm
+++ b/main.htm
@@ -3,11 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>资源链接</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<h4>css</h4>
+	
 	<h4>es6</h4>
 	<ol>
 		<li><a href="https://leanpub.com/b/learnes6">Learn ECMAScript 6 inside and out</a></li>
+		<li><a href="https://hacks.mozilla.org/category/es6-in-depth/">es6-in-depth</a></li>
+		<li><a href="https://codetower.github.io/es6-features/">es6-features</a></li>
+	</ol>
+	<h4>在线编辑工具</h4>
+	<ol>
+		<li><a href="https://playcode.io/">playcode</a></li>
 	</ol>
 </body>
 </html>
