--- a/main.htm
+++ b/main.htm
@@ -3,20 +3,33 @@
 <head>
 	<meta charset="UTF-8">
 	<title>资源链接</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<h4>css</h4>
-	
+	<ol>
+		<li><a href="http://www.bennettfeely.com/clippy/" target="_blank">clip path</a></li>
+	</ol>
 	<h4>es6</h4>
 	<ol>
-		<li><a href="https://leanpub.com/b/learnes6">Learn ECMAScript 6 inside and out</a></li>
-		<li><a href="https://hacks.mozilla.org/category/es6-in-depth/">es6-in-depth</a></li>
-		<li><a href="https://codetower.github.io/es6-features/">es6-features</a></li>
+		<li><a href="https://leanpub.com/b/learnes6" target="_blank">Learn ECMAScript 6 inside and out</a></li>
+		<li><a href="https://hacks.mozilla.org/category/es6-in-depth/" target="_blank">es6-in-depth</a></li>
+		<li><a href="https://codetower.github.io/es6-features/" target="_blank">es6-features</a></li>
+	</ol>
+	<h4>html5 demo</h4>
+	<ol>
+		<li><a href="http://html5demos.com/" target="_blank">HTML 5 Demos and Examples</a></li>
 	</ol>
 	<h4>在线编辑工具</h4>
 	<ol>
-		<li><a href="https://playcode.io/">playcode</a></li>
+		<li><a href="https://playcode.io/" target="_blank">playcode</a></li>
+	</ol>
+	<h4>学习</h4>
+	<ol>
+		<li><a href="https://nodeschool.io/zh-cn/" target="_blank">nodeschool</a></li>
+		<li><a href="https://docs.emmet.io/cheat-sheet/" target="blank">emmet docs</a></li>
+		<li><a href="http://www.cnblogs.com/PeunZhang/p/3407453.html" target="blank">常见问题整理</a></li>
 	</ol>
 </body>
 </html>
